Added installation instructions without cloning

--- a/README.org
+++ b/README.org
@@ -10,9 +10,9 @@ This plugin addresses this exploit by searching the page for all urls with =data
 
 I will submit this plugin to Google. But, the approval process may take a while. To install in the meantime:
 
-- Clone this repository.
+- Download [[https://github.com/elsehow/Block-data-uri-attack/blob/master/chrome-ext.zip][the extension .zip]] and unzip.
 - Navigate to chrome://extensions
-- Drag the =chrome-ext= folder into your broser window.
+- Drag the unzipped =chrome-ext= folder into your browser window.
 - Check Enabled.
 
 ** Limitations
